--- a/finance_tracker/pubspec.yaml
+++ b/finance_tracker/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_animate: ^4.5.2
   persistent_bottom_nav_bar: ^6.2.1
+  fl_chart: ^0.63.0
 
 dev_dependencies:
   flutter_test:
