--- a/finance_tracker/pubspec.yaml
+++ b/finance_tracker/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_animate: ^4.5.2
   persistent_bottom_nav_bar: ^6.2.1
   fl_chart: ^0.63.0
+  intl:
+  month_picker_dialog: ^3.0.0
 
 dev_dependencies:
   flutter_test:
